--- a/client/index.html
+++ b/client/index.html
@@ -16,57 +16,57 @@
     <title>Node Practice</title>
   </head>
   <body>
-    <h1 class="text-center mt-3 mb-3 display-5">Full stack Practice</h1>
+    <h1 class="text-center mt-3 mb-3 display-4">Full stack Practice</h1>
 
-    <h3 class="text-center mt-3 mb-3 display-5">Form to create products.</h3>
+    <p class="text-center mt-3 mb-3 display-6">Form to create products.</p>
 
     <!-- Optional JavaScript; choose one of the two! -->
-    <form action="" method="post" id="productFrom">
+    <form action="#" id="productFrom">
       <div class="container w-50 d-flex flex-column gap-3">
         <div class="form-floating">
           <input
             type="text"
             class="form-control"
-            id="floatingInput"
+            id="title"
             placeholder="title"
           />
-          <label for="floatingInput">Title:</label>
+          <label for="title">Title:</label>
         </div>
         <div class="form-floating">
           <input
             type="text"
             class="form-control"
-            id="floatingInput"
+            id="description"
             placeholder="description"
           />
-          <label for="floatingInput">Description:</label>
+          <label for="description">Description:</label>
         </div>
         <div class="form-floating">
           <input
             type="number"
             class="form-control"
-            id="floatingInput"
+            id="price"
             placeholder="price"
           />
-          <label for="floatingInput">Price:</label>
+          <label for="price">Price:</label>
         </div>
         <div class="form-floating">
           <input
             type="text"
             class="form-control"
-            id="floatingInput"
+            id="category"
             placeholder="category"
           />
-          <label for="floatingInput">Category:</label>
+          <label for="category">Category:</label>
         </div>
         <div class="form-floating">
           <input
             type="text"
             class="form-control"
-            id="floatingInput"
+            id="image"
             placeholder="image"
           />
-          <label for="floatingInput">Image Url:</label>
+          <label for="image">Image Url:</label>
         </div>
         <div>
           <button type="submit" class="btn btn-primary" id="submit">
