--- a/client/product.html
+++ b/client/product.html
@@ -21,7 +21,7 @@
     <h3 class="text-center mt-3 mb-3 display-5">All products.</h3>
 
     <!-- products to be displayed here using script file respectively! -->
-    <div class="container" id="container"></div>
+    <div class="container row" id="container"></div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
